Web page cssauthor.com

--- a/web_page_markup.html
+++ b/web_page_markup.html
@@ -137,19 +137,18 @@
         </section>
     </div>
     <footer>
-        <div class="fl">
             <div class="foot">
                 <div class="topic1">
                     <div class="topic">
                         <a class="link3">Sub Menu</a>
                     </div>
                     <div class="column">
-                        <a class="link2">Android</a>
-                        <a class="link2">Apps</a>
-                        <a class="link2">Articles</a>
-                        <a class="link2">Backgrounds</a>
-                        <a class="link2">Blogger</a>
-                        <a class="link2">Books</a>
+                        <a class="link2">Android</a><br>
+                        <a class="link2">Apps</a><br>
+                        <a class="link2">Articles</a><br>
+                        <a class="link2">Backgrounds</a><br>
+                        <a class="link2">Blogger</a><br>
+                        <a class="link2">Books</a><br>
                         <a class="link2">Coding</a>
                     </div>
                 </div>
@@ -158,12 +157,12 @@
                         <a class="link3">Sub Menu</a>
                     </div>
                     <div class="column">
-                        <a class="link2">Freebies</a>
-                        <a class="link2">Greetings</a>
-                        <a class="link2">Icons</a>
-                        <a class="link2">Illustrator</a>
-                        <a class="link2">Inspiration</a>
-                        <a class="link2">iPad</a>
+                        <a class="link2">Freebies</a><br>
+                        <a class="link2">Greetings</a><br>
+                        <a class="link2">Icons</a><br>
+                        <a class="link2">Illustrator</a><br>
+                        <a class="link2">Inspiration</a><br>
+                        <a class="link2">iPad</a><br>
                         <a class="link2">iPhone</a>
                     </div>
                 </div>
@@ -172,12 +171,12 @@
                         <a class="link3">Sub Menu</a>
                     </div>
                     <div class="column">
-                        <a class="link2">Drupal</a>
-                        <a class="link2">Fronts</a>
-                        <a class="link2">Freebies</a>
-                        <a class="link2">Greetings</a>
-                        <a class="link2">Icons</a>
-                        <a class="link2">Illustrator</a>
+                        <a class="link2">Drupal</a><br>
+                        <a class="link2">Fronts</a><br>
+                        <a class="link2">Freebies</a><br>
+                        <a class="link2">Greetings</a><br>
+                        <a class="link2">Icons</a><br>
+                        <a class="link2">Illustrator</a><br>
                         <a class="link2">Inspiration</a>
                     </div>
                 </div>
@@ -186,20 +185,25 @@
                         <a class="link3">Sub Menu</a>
                     </div>
                     <div class="column">
-                        <a class="link2">JQuery</a>
-                        <a class="link2">Magento</a>
-                        <a class="link2">Mobile</a>
-                        <a class="link2">Photoshop</a>
-                        <a class="link2">Plugins</a>
-                        <a class="link2">Resource</a>
+                        <a class="link2">JQuery</a><br>
+                        <a class="link2">Magento</a><br>
+                        <a class="link2">Mobile</a><br>
+                        <a class="link2">Photoshop</a><br>
+                        <a class="link2">Plugins</a><br>
+                        <a class="link2">Resource</a><br>
                         <a class="link2">Templates</a>
                     </div>
                 </div>
-                <div class="social">
-
+                <div class="topic1">
+                    <img src="ic5.png" alt="icon">
+                    <img src="ic6.png" alt="icon">
+                    <img src="ic7.png" alt="icon">
+                    <img src="ic8.png" alt="icon">
+                    <div class="column">
+                       <p>Copyright 2009-2013 Cssauthor.com</p>
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
 </body>
 </html>
