Web page cssauthor.com

--- a/web_page_markup.html
+++ b/web_page_markup.html
@@ -87,9 +87,7 @@
                 </div>
             </div>
         </section>
-            <div class="line">
-                <hr>
-            </div>
+            <hr noshade>
             <div class="place1"></div>
         <section>
                 <div class="introduct">
